--- a/bootbox-util/build.gradle
+++ b/bootbox-util/build.gradle
@@ -3,7 +3,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     // Cache
 
-    compile project(':bootbox-alarm')
+//    compile project(':bootbox-alarm')
 
     // util
     compile group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
