--- a/bootbox-web/build.gradle
+++ b/bootbox-web/build.gradle
@@ -5,5 +5,7 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
     compile "org.springframework.boot:spring-boot-starter-jetty:$springBootVersion"
     compileOnly group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+
+    compile group: 'io.dropwizard.metrics', name: 'metrics-core', version: '4.1.0'
 //    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
 }
