--- a/bootbox-configure/build.gradle
+++ b/bootbox-configure/build.gradle
@@ -17,6 +17,8 @@ dependencies {
 
     compileOnly project(':bootbox-mybatis')
 
+    compileOnly project(':bootbox-server')
+
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
 }
 
