refactor(gradle): optimize project structure

--- a/bootbox-alarm/bootbox-alarm-mail/build.gradle
+++ b/bootbox-alarm/bootbox-alarm-mail/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
     compile 'org.simplejavamail:simple-java-mail:5.2.0'
-    compile project(':bootbox-alarm')
+    compile project(':bootbox-alarm-spi')
     compile project(':bootbox-util')
 }
 
