--- a/bootbox-web/build.gradle
+++ b/bootbox-web/build.gradle
@@ -1,7 +1,7 @@
 
 dependencies {
     compile project(':bootbox-util')
-    compile project(':bootbox-alarm')
+    compile project(':bootbox-alarm-spi')
     compile "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
     compile "org.springframework.boot:spring-boot-starter-jetty:$springBootVersion"
     compileOnly group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
