--- a/settings.gradle
+++ b/settings.gradle
@@ -1,27 +1,14 @@
+rootProject.name = 'bootbox'
 
 include 'bootbox-util'
 
 include 'bootbox-redis'
 
 include 'bootbox-configure'
-include 'bootbox-config'
-include 'bootbox-config-redis'
-include 'bootbox-config-nacos'
+
 
 include 'bootbox-context'
 
-include 'bootbox-cache'
-include 'bootbox-cache-guava'
-include 'bootbox-cache-ehcache'
-include 'bootbox-cache-redis'
-
-include 'bootbox-queue'
-include 'bootbox-queue-ali'
-
-include 'bootbox-sms'
-include 'bootbox-sms-qcloud'
-
-include 'bootbox-alarm'
 
 include 'bootbox-web'
 
@@ -32,7 +19,6 @@ include 'bootbox-mybatis'
 include 'bootbox-sba'
 
 include 'bootbox-standalone'
-include 'bootbox-alarm-mail'
 
 include 'bootbox-server'
 
@@ -40,4 +26,9 @@ include 'bootbox-generator'
 
 include 'bootbox-security'
 
-rootProject.name = 'bootbox'
+
+apply from: "./bootbox-config/settings.gradle"
+apply from: "./bootbox-cache/settings.gradle"
+apply from: "./bootbox-alarm/settings.gradle"
+apply from: "./bootbox-sms/settings.gradle"
+apply from: "./bootbox-queue/settings.gradle"
