--- a/bootbox-cache/bootbox-cache-ehcache/build.gradle
+++ b/bootbox-cache/bootbox-cache-ehcache/build.gradle
@@ -1,6 +1,6 @@
 
 dependencies {
-    compile project(':bootbox-cache')
+    compile project(':bootbox-cache-spi')
     compile 'javax.cache:cache-api:1.1.1'
     compile 'org.ehcache:ehcache:3.7.0'
 }
