--- a/bootbox-config/bootbox-config-redis/build.gradle
+++ b/bootbox-config/bootbox-config-redis/build.gradle
@@ -1,6 +1,6 @@
 
 dependencies {
-    compile project(':bootbox-config')
+    compile project(':bootbox-config-spi')
     compile project(':bootbox-redis')
     compile project(':bootbox-context')
 }
