--- a/bootbox-config/bootbox-config-nacos/build.gradle
+++ b/bootbox-config/bootbox-config-nacos/build.gradle
@@ -1,8 +1,6 @@
 
 dependencies {
-    compile project(':bootbox-config-spi')
+    api project(':bootbox-config-spi')
     compile group: 'com.alibaba.nacos', name: 'nacos-client', version: '0.9.1'
 }
-
-
 
