--- a/bootbox-redis/build.gradle
+++ b/bootbox-redis/build.gradle
@@ -1,6 +1,6 @@
 
 dependencies {
-    compile "org.springframework.boot:spring-boot-starter-data-redis:$springBootVersion"
+    api "org.springframework.boot:spring-boot-starter-data-redis:$springBootVersion"
 //    compile project(':dubbo-api')
 //    compile project(':base-core')
 }
