--- a/bootbox-cache/bootbox-cache-ehcache/build.gradle
+++ b/bootbox-cache/bootbox-cache-ehcache/build.gradle
@@ -1,9 +1,8 @@
 
 dependencies {
-    compile project(':bootbox-cache-spi')
-    compile 'javax.cache:cache-api:1.1.1'
-    compile 'org.ehcache:ehcache:3.7.0'
+    api project(':bootbox-cache-spi')
+    api 'org.ehcache:ehcache:3.7.0'
+    implementation 'javax.cache:cache-api:1.1.1'
 }
-
 
 
