--- a/bootbox-cache/bootbox-cache-redis/build.gradle
+++ b/bootbox-cache/bootbox-cache-redis/build.gradle
@@ -1,7 +1,7 @@
 
 dependencies {
-    compile project(':bootbox-cache-spi')
-    compile project(':bootbox-redis')
+    api project(':bootbox-cache-spi')
+    implementation project(':bootbox-redis')
 }
 
 
