--- a/bootbox-mybatis/build.gradle
+++ b/bootbox-mybatis/build.gradle
@@ -1,13 +1,13 @@
 
 dependencies {
-    compile project(':bootbox-context')
-    compile "org.springframework.boot:spring-boot-starter-jdbc:$springBootVersion"
+    implementation project(':bootbox-context')
+    api "org.springframework.boot:spring-boot-starter-jdbc:$springBootVersion"
     
     // Datasource
     compile group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
     compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
     compile group: 'com.zaxxer', name: 'HikariCP', version: '3.3.1'
-    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.38'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.38'
 }
 
 
