--- a/bootbox-queue/bootbox-queue-ali/build.gradle
+++ b/bootbox-queue/bootbox-queue-ali/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
-    compile project(':bootbox-queue-spi')
-    compile group: 'com.aliyun.mns', name: 'aliyun-sdk-mns', version: '1.1.8'
+    api project(':bootbox-queue-spi')
+    api group: 'com.aliyun.mns', name: 'aliyun-sdk-mns', version: '1.1.8'
 }
 
 
