--- a/bootbox-security/build.gradle
+++ b/bootbox-security/build.gradle
@@ -1,6 +1,7 @@
 
 dependencies {
-    compile project(':bootbox-web')
-    compile("org.springframework.boot:spring-boot-starter-security:$springBootVersion")
+    implementation project(':bootbox-server')
+    implementation project(':bootbox-web')
+    api ("org.springframework.boot:spring-boot-starter-security:$springBootVersion")
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
 }
