--- a/bootbox-wechat/build.gradle
+++ b/bootbox-wechat/build.gradle
@@ -1,6 +1,6 @@
 
 dependencies {
-    compile project(':bootbox-web')
-    compile project(':bootbox-util')
+    implementation project(':bootbox-web')
+    implementation project(':bootbox-util')
     compileOnly group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.4'
 }
