--- a/bootbox-mybatis/build.gradle
+++ b/bootbox-mybatis/build.gradle
@@ -6,8 +6,10 @@ dependencies {
     // Datasource
     compile group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
     compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
-    compile group: 'com.zaxxer', name: 'HikariCP', version: '3.3.1'
+
+    api group: 'com.zaxxer', name: 'HikariCP', version: '3.3.1'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.38'
+//    api 'com.alibaba:druid-spring-boot-starter:1.1.18'
 }
 
 
