--- a/bootbox-configure/build.gradle
+++ b/bootbox-configure/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     compileOnly project(':bootbox-server')
 
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
-
+//    compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 }
 
 
