refactor(project): rename package name

--- a/flycat-configure/src/main/resources/META-INF/spring-autoconfigure-metadata.properties
+++ b/flycat-configure/src/main/resources/META-INF/spring-autoconfigure-metadata.properties
@@ -14,10 +14,10 @@
 # limitations under the License.
 #
 
-com.github.flycat.autoconfigure.AliMqConfiguration.ConditionalOnClass=com.github.flycat.queue.ali.QueueFactoryImpl
-com.github.flycat.autoconfigure.GuavaCacheConfiguration.ConditionalOnClass=com.github.flycat.cache.guava.GuavaCacheService
+com.github.flycat.autoconfigure.AliMqConfiguration.ConditionalOnClass=com.github.flycat.spi.queue.ali.QueueFactoryImpl
+com.github.flycat.autoconfigure.GuavaCacheConfiguration.ConditionalOnClass=com.github.flycat.spi.cache.guava.GuavaCacheService
 com.github.flycat.autoconfigure.MybatisConfiguration.ConditionalOnClass=org.mybatis.spring.mapper.MapperScannerConfigurer
-com.github.flycat.autoconfigure.QcloudSmsConfiguration.ConditionalOnClass=com.github.flycat.sms.qcloud.QcloudSmsSender
+com.github.flycat.autoconfigure.QcloudSmsConfiguration.ConditionalOnClass=com.github.flycat.spi.sms.qcloud.QcloudSmsSender
 com.github.flycat.autoconfigure.RedisConfiguration.ConditionalOnClass=org.springframework.data.redis.core.StringRedisTemplate
 com.github.flycat.autoconfigure.SpringContextConfiguration.ConditionalOnClass=com.github.flycat.autoconfigure.SpringContextConfiguration
 com.github.flycat.autoconfigure.WebConfiguration.ConditionalOnClass=com.github.flycat.web.FlycatWebConfiguration
