--- a/config/gradle/javaProject.gradle
+++ b/config/gradle/javaProject.gradle
@@ -9,7 +9,11 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '25.1-jre'
     compile group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
-    compile group: 'org.jetbrains', name: 'annotations', version: '13.0'
+//    compile group: 'org.jetbrains', name: 'annotations', version: '13.0'
+    compile group: 'javax.inject', name: 'javax.inject', version: '1'
+    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+
+    compile 'com.google.code.findbugs:jsr305:3.0.2'
     // vendor
 
     testCompile 'junit:junit:4.12'
