refactor(alarm): use ioc instead of java spi loader

--- a/flycat-alarm/flycat-alarm-spi/build.gradle
+++ b/flycat-alarm/flycat-alarm-spi/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
+    implementation project(':flycat-context')
     implementation project(':flycat-server')
     implementation project(':flycat-util')
     compile group: 'io.dropwizard.metrics', name: 'metrics-core', version: '4.1.0'
