refactor(alarm): use ApplicationConfiguration

--- a/flycat-alarm/flycat-alarm-mail/build.gradle
+++ b/flycat-alarm/flycat-alarm-mail/build.gradle
@@ -2,6 +2,7 @@ dependencies {
     api project(':flycat-alarm-spi')
     api 'org.simplejavamail:simple-java-mail:5.2.0'
     implementation project(':flycat-server')
+    implementation project(':flycat-context')
     implementation project(':flycat-util')
 }
 
