--- a/settings.gradle
+++ b/settings.gradle
@@ -34,3 +34,4 @@ apply from: "./flycat-cache/settings.gradle"
 apply from: "./flycat-alarm/settings.gradle"
 apply from: "./flycat-sms/settings.gradle"
 apply from: "./flycat-queue/settings.gradle"
+apply from: "./flycat-platform/settings.gradle"
