--- a/flycat-platform/flycat-springboot/build.gradle
+++ b/flycat-platform/flycat-springboot/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 
     compileOnly project(':flycat-server')
 
+    api project(':flycat-ds-hikari')
+
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
 //    compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 }
