--- a/flycat-platform/settings.gradle
+++ b/flycat-platform/settings.gradle
@@ -1,3 +1,9 @@
 include 'flycat-springboot'
+include 'flycat-ds-hikari'
+include 'flycat-ds'
 
 project (':flycat-springboot').projectDir = new File('./flycat-platform/flycat-springboot')
+project (':flycat-ds-hikari').projectDir = new File('./flycat-platform/flycat-ds-hikari')
+
+project (':flycat-ds').projectDir = new File('./flycat-platform/flycat-ds')
+
