refactor(module): rename package name

--- a/flycat-security/build.gradle
+++ b/flycat-security/build.gradle
@@ -1,6 +1,6 @@
 
 dependencies {
-    implementation project(':flycat-server')
+    implementation project(':flycat-util')
     implementation project(':flycat-web')
     api ("org.springframework.boot:spring-boot-starter-security:$springBootVersion")
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
