--- a/flycat-platform/flycat-springboot/build.gradle
+++ b/flycat-platform/flycat-springboot/build.gradle
@@ -1,5 +1,7 @@
 
 dependencies {
+    api project(':flycat-util')
+
     compileOnly project(':flycat-context')
     compileOnly project(':flycat-redis')
 
@@ -24,9 +26,10 @@ dependencies {
 
     compileOnly project(':flycat-mybatis')
 
-    compileOnly project(':flycat-server')
+//    compileOnly project(':flycat-server')
 
     api project(':flycat-ds-druid')
+
 
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
 //    compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
