--- a/flycat-platform/flycat-springboot/src/main/resources/META-INF/spring-autoconfigure-metadata.properties
+++ b/flycat-platform/flycat-springboot/src/main/resources/META-INF/spring-autoconfigure-metadata.properties
@@ -14,6 +14,6 @@
 # limitations under the License.
 #
 
-com.github.flycat.autoconfigure.MybatisConfiguration.ConditionalOnClass=org.mybatis.spring.mapper.MapperScannerConfigurer
-com.github.flycat.autoconfigure.WebConfiguration.ConditionalOnClass=com.github.flycat.web.FlycatWebConfiguration
-com.github.flycat.autoconfigure.WechatConfiguration.ConditionalOnClass=com.github.flycat.wechat.WechatLogin
+MybatisConfiguration.ConditionalOnClass=org.mybatis.spring.mapper.MapperScannerConfigurer
+WebConfiguration.ConditionalOnClass=com.github.flycat.web.FlycatWebConfiguration
+WechatConfiguration.ConditionalOnClass=com.github.flycat.wechat.WechatLogin
