refactor(project): improve module structure

--- a/build.gradle
+++ b/build.gradle
@@ -96,7 +96,7 @@ configure(subprojects) { project ->
 }
 
 ext.bootProjects = subprojects.findAll {
-    it.name.startsWith("flycat-sba")
+    it.name.startsWith("flycat-springboot-sba")
 }
 
 configure(bootProjects) { project ->
