--- a/flycat-springboot/flycat-autoconfigure/build.gradle
+++ b/flycat-springboot/flycat-autoconfigure/build.gradle
@@ -26,9 +26,8 @@ dependencies {
 
     compileOnly project(':flycat-springboot-mybatis')
 
-//    compileOnly project(':flycat-server')
+    compileOnly project(':flycat-ds')
 
-    api project(':flycat-ds-druid')
 
 
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
