refactor(package): rename platform to component

--- a/flycat-springboot/flycat-app/build.gradle
+++ b/flycat-springboot/flycat-app/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     api project(':flycat-springboot-security')
     api project(':flycat-alarm-mail')
     api project(':flycat-ds-druid')
+    api project(':flycat-springboot-autoconfigure')
 
 
     compile("org.springframework.boot:spring-boot-starter-actuator:$springBootVersion")
