refactor(redis): add springboot redis module

--- a/flycat-context/build.gradle
+++ b/flycat-context/build.gradle
@@ -1,6 +1,6 @@
+
 dependencies {
-    compile "org.springframework.boot:spring-boot:$springBootVersion"
-    compile "org.springframework.boot:spring-boot-autoconfigure:$springBootVersion"
+    compileOnly "org.springframework.boot:spring-boot:$springBootVersion"
 }
 
 
