--- a/flycat-springboot/flycat-autoconfigure/build.gradle
+++ b/flycat-springboot/flycat-autoconfigure/build.gradle
@@ -1,8 +1,7 @@
 
 dependencies {
-    api project(':flycat-util')
+    api project(':flycat-context')
 
-    compileOnly project(':flycat-context')
     compileOnly project(':flycat-redis')
 
     compileOnly project(':flycat-config-spi')
@@ -28,7 +27,8 @@ dependencies {
 
     compileOnly project(':flycat-ds')
 
-
+    compile "org.springframework.boot:spring-boot:$springBootVersion"
+    compile "org.springframework.boot:spring-boot-autoconfigure:$springBootVersion"
 
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
 //    compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
