--- a/flycat-springboot/settings.gradle
+++ b/flycat-springboot/settings.gradle
@@ -13,6 +13,10 @@ project(':flycat-springboot-app').projectDir = new File('./flycat-springboot/fly
 include 'flycat-springboot-sba'
 project(':flycat-springboot-sba').projectDir = new File('./flycat-springboot/flycat-sba')
 
-
 include 'flycat-springboot-mybatis'
 project(':flycat-springboot-mybatis').projectDir = new File('./flycat-springboot/flycat-mybatis')
+
+
+include 'flycat-springboot-redis'
+project(':flycat-springboot-redis').projectDir = new File('./flycat-springboot/flycat-redis')
+
