--- a/flycat-config/flycat-config-redis/build.gradle
+++ b/flycat-config/flycat-config-redis/build.gradle
@@ -1,8 +1,8 @@
 
 dependencies {
+    api project(':flycat-context')
     api project(':flycat-config-spi')
     implementation project(':flycat-redis')
-    implementation project(':flycat-context')
 }
 
 
