--- a/flycat-springboot/settings.gradle
+++ b/flycat-springboot/settings.gradle
@@ -16,7 +16,8 @@ project(':flycat-springboot-sba').projectDir = new File('./flycat-springboot/fly
 include 'flycat-springboot-mybatis'
 project(':flycat-springboot-mybatis').projectDir = new File('./flycat-springboot/flycat-mybatis')
 
-
 include 'flycat-springboot-redis'
 project(':flycat-springboot-redis').projectDir = new File('./flycat-springboot/flycat-redis')
 
+include 'flycat-springboot-web'
+project(':flycat-springboot-web').projectDir = new File('./flycat-springboot/flycat-web')
