--- a/flycat-datasource/flycat-ds-druid/build.gradle
+++ b/flycat-datasource/flycat-ds-druid/build.gradle
@@ -1,12 +1,10 @@
 
 dependencies {
     api project(':flycat-ds')
-    api project(':flycat-context')
     implementation group: 'com.alibaba', name: 'druid', version: '1.1.20'
 
-    compileOnly "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
-    compileOnly 'javax.servlet:javax.servlet-api:3.1.0'
-//    compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+    compileOnly project(':flycat-springboot-context')
+    compileOnly project(':flycat-springboot-web')
 }
 
 
