--- a/flycat-springboot/flycat-web/build.gradle
+++ b/flycat-springboot/flycat-web/build.gradle
@@ -1,5 +1,7 @@
 dependencies {
-    api project(':flycat-web')
+    api (project(':flycat-web')) {
+        exclude group: 'javax.validation', module: 'validation-api'
+    }
     api "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
     api "org.springframework.boot:spring-boot-starter-jetty:$springBootVersion"
 
