refactor(event,log): rename package name

--- a/flycat-context/build.gradle
+++ b/flycat-context/build.gradle
@@ -1,6 +1,7 @@
 
 dependencies {
     compileOnly "org.springframework.boot:spring-boot:$springBootVersion"
+    compileOnly group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 }
 
 
