--- a/flycat-springboot/flycat-mybatis/build.gradle
+++ b/flycat-springboot/flycat-mybatis/build.gradle
@@ -1,13 +1,16 @@
 
 dependencies {
-    api "org.springframework.boot:spring-boot-starter-jdbc:$springBootVersion"
+//    api "org.springframework.boot:spring-boot-starter-jdbc:$springBootVersion"
     
     // Datasource
-    compile group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
-    compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
+//    compile group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
+//    compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
 
-    implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.38'
-//    api 'com.alibaba:druid-spring-boot-starter:1.1.18'
+//    implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.38'
+    api group: 'com.baomidou', name: 'mybatis-plus-boot-starter', version: '3.1.2'
+
+//    api group: 'com.baomidou', name: 'mybatis-plus', version: '3.2.0'
+
 }
 
 
