--- a/flycat-springboot/flycat-mybatis/build.gradle
+++ b/flycat-springboot/flycat-mybatis/build.gradle
@@ -1,14 +1,15 @@
 
 dependencies {
-//    api "org.springframework.boot:spring-boot-starter-jdbc:$springBootVersion"
+    api "org.springframework.boot:spring-boot-starter-jdbc:$springBootVersion"
     
     // Datasource
 //    compile group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
 //    compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
 
-//    implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.38'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.48'
     api group: 'com.baomidou', name: 'mybatis-plus-boot-starter', version: '3.1.2'
-
+    // https://mvnrepository.com/artifact/p6spy/p6spy
+    compile group: 'p6spy', name: 'p6spy', version: '3.8.5'
 
 //    api group: 'com.baomidou', name: 'mybatis-plus', version: '3.2.0'
 
