--- a/config/gradle/bootProject.gradle
+++ b/config/gradle/bootProject.gradle
@@ -2,7 +2,8 @@ apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.springframework.boot'
 apply plugin: "java"
 apply plugin: 'application'
-//    apply from: '../tasks.gradle'
+apply from: "${gradleConfigDir}/tasks.gradle"
+processResources.dependsOn copyConfiguration
 
 ext.springJvmArgs = ["-Dspring.profiles.active=$env"]
 
