--- a/config/gradle/javaProject.gradle
+++ b/config/gradle/javaProject.gradle
@@ -2,6 +2,13 @@ apply plugin: 'checkstyle'
 apply plugin: 'idea'
 apply plugin: "java"
 apply plugin: "java-library"
+apply plugin: "io.freefair.lombok"
+generateLombokConfig.enabled = false
+
+lombok {
+    version = "1.18.10"
+
+}
 
 dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
