--- a/config/gradle/javaProject.gradle
+++ b/config/gradle/javaProject.gradle
@@ -22,6 +22,8 @@ dependencies {
 
     compile 'com.google.code.findbugs:jsr305:3.0.2'
     // vendor
+// https://mvnrepository.com/artifact/org.apache.commons/commons-text
+    compile group: 'org.apache.commons', name: 'commons-text', version: '1.6'
 
     testCompile 'junit:junit:4.12'
 }
