--- a/flycat-springboot/flycat-app/build.gradle
+++ b/flycat-springboot/flycat-app/build.gradle
@@ -19,6 +19,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator:$springBootVersion")
     compile("org.springframework.boot:spring-boot-starter-security:$springBootVersion")
     compile group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.1.6'
+
+    developmentOnly("org.springframework.boot:spring-boot-devtools:$springBootVersion")
 }
 
 
