--- a/flycat-springboot/flycat-web/build.gradle
+++ b/flycat-springboot/flycat-web/build.gradle
@@ -5,5 +5,8 @@ dependencies {
     api "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
     api "org.springframework.boot:spring-boot-starter-jetty:$springBootVersion"
 
+
+    compileOnly group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
+
     implementation group: 'io.dropwizard.metrics', name: 'metrics-core', version: '4.1.0'
 }
