--- a/config/gradle/javaProject.gradle
+++ b/config/gradle/javaProject.gradle
@@ -10,6 +10,8 @@ lombok {
 
 }
 
+
+
 dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
 
@@ -19,6 +21,10 @@ dependencies {
 //    compile group: 'org.jetbrains', name: 'annotations', version: '13.0'
     compile group: 'javax.inject', name: 'javax.inject', version: '1'
     compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+
+    compile 'org.javassist:javassist:3.21.0-GA'
+    compile 'org.reflections:reflections:0.9.9-RC2'
+
 
     compile 'com.google.code.findbugs:jsr305:3.0.2'
     // vendor
