--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,4 @@ apply from: "./flycat-queue/settings.gradle"
 apply from: "./flycat-datasource/settings.gradle"
 apply from: "./flycat-springboot/settings.gradle"
 
+apply from: "./flycat-json/settings.gradle"
