--- a/flycat-springboot/flycat-configure/build.gradle
+++ b/flycat-springboot/flycat-configure/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     compileOnly project(':flycat-ds')
 
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
+
+    compileOnly group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
+
 //    compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 }
 
