--- a/flycat-util/build.gradle
+++ b/flycat-util/build.gradle
@@ -6,7 +6,7 @@ dependencies {
 //    compile project(':flycat-alarm')
 
     // util
-    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
+//    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.12'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.8'
