refactor(commons): wrap StringUtils

--- a/flycat-context/build.gradle
+++ b/flycat-context/build.gradle
@@ -1,5 +1,7 @@
 
 dependencies {
+    api project(':flycat-util')
+
     compileOnly "org.springframework.boot:spring-boot:$springBootVersion"
     compileOnly group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 }
