--- a/config/gradle/javaProject.gradle
+++ b/config/gradle/javaProject.gradle
@@ -13,7 +13,7 @@ lombok {
 
 
 dependencies {
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+//    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
 
     compile group: 'com.google.guava', name: 'guava', version: '25.1-jre'
 //    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
@@ -29,7 +29,7 @@ dependencies {
     compile 'com.google.code.findbugs:jsr305:3.0.2'
     // vendor
 // https://mvnrepository.com/artifact/org.apache.commons/commons-text
-    compile group: 'org.apache.commons', name: 'commons-text', version: '1.6'
+//    compile group: 'org.apache.commons', name: 'commons-text', version: '1.6'
 
     testCompile 'junit:junit:4.12'
 }
