--- a/flycat-util/build.gradle
+++ b/flycat-util/build.gradle
@@ -7,7 +7,9 @@ dependencies {
 
     // util
 //    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.6'
+
     compile group: 'commons-codec', name: 'commons-codec', version: '1.12'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.8'
     compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.8'
