chore(springboot): use tomcat instead of jetty

--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ configure(subprojects) { project ->
         all*.exclude group: 'commons-logging', module: 'commons-logging'
         // replaced with log4j-over-slf4j
         all*.exclude group: 'log4j', module: 'log4j'
-        compile.exclude module: "spring-boot-starter-tomcat"
+//        compile.exclude module: "spring-boot-starter-tomcat"
         developmentOnly
         runtimeClasspath {
             extendsFrom developmentOnly
